--- a/home/manage-environments.html
+++ b/home/manage-environments.html
@@ -98,27 +98,29 @@
 <p>Create your own environment:</p>
 <ul>
 <li>Either click the Environments tab on the left menu and then click <strong>New Environment</strong> button on the top right corner</li>
-<li>Or you can already see the environment page open with the fields available to create a new environment</li>
-</ul>
+<li><p>Or you can already see the environment page open with the fields available to create a new environment</p>
 <p><img src="images/env_tab.png" alt=""></p>
+</li>
+</ul>
 <p><br></p>
 <ul>
-<li>Fill Name and Description fields</li>
-<li>Select one of the available templates from dropdown list, based on your requirements</li>
-<li>Click <strong>Create environment</strong>
-All fields are mandatory except &#39;Labels&#39;</li>
-</ul>
+<li>Fill in the <strong>Environment</strong> <strong>Name</strong> and <strong>Environment</strong> <strong>Description</strong> fields</li>
+<li>Select one of the available <strong>Template</strong> <strong>Types</strong> and the <strong>Template</strong> from the drop-down lists</li>
+<li>Fill in the <strong>Labels</strong> field (optional)</li>
+<li><p>Click <strong>Create environment</strong></p>
 <p><img src="images/env-new.png" alt=""></p>
+</li>
+</ul>
 <p><br></p>
-<p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following a manual/ automated factory:
-<img src="images/env-list.png" alt=""></p>
+<p> To see the details of an environment you need to select it from the environments list. This window allows you to also filter the Extend environments or those resulted following  automated factory:
+ <img src="images/env-list.png" alt=""></p>
 <p><br>
 </br></p>
 <ul>
 <li><strong>Templates</strong></li>
 </ul>
 <p>Check the list with all available templates. Click the <strong>Templates Catalog</strong> on the left menu.</p>
-<p><img src="images/template-details.png" alt=""></p>
+<p> <img src="images/template-details.png" alt=""></p>
 <ol>
 <li><p>Click on the <strong>Template Type</strong> and select for one of the applications, for example T24 to see the templates that are available for your organisation. </p>
 </li>
@@ -126,11 +128,11 @@ All fields are mandatory except &#39;Labels&#39;</li>
 </li>
 <li><p>Hover over the <strong>Name</strong> field to list all the available templates alphabetically</p>
 </li>
-<li><p>Select the number of <strong>items per page</strong> you want to display</p>
+<li><p>Select the number of <strong>Items per page</strong> you want to display</p>
 </li>
 <li><p>Click on a template - on the right you will see the name of the template, its version, installation and expiration dates as well as:</p>
 </li>
-<li><p>The <strong>Release Notes</strong></p>
+<li><p>The <strong>Release Notes</strong> - displays the Contents (Release Information, Latest Updates) and the Topology </p>
 </li>
 <li><p>The <strong>Components List</strong> - these can be filtered as the user wants</p>
 <p><img src="images/template-components-list.png" alt=""></p>
