--- a/home/techguides/manage-workflows.html
+++ b/home/techguides/manage-workflows.html
@@ -134,7 +134,9 @@
 <h1 id="edit-and-delete-a-workflow">Edit and delete a workflow</h1>
 <p>Users can edit and delete workflows only if these are not assigned to a factory.</p>
 <ul>
-<li><p>to edit a workflow click on the Edit button. In this phase you can change the workflow elements and connections. Click Update workflow once you finish updating it.</p>
+<li><p>to edit a workflow click on the <strong>Edit</strong> button. In this phase you can change the workflow elements and connections. Click Update workflow once you finish updating it.</p>
+</li>
+<li><p>the <strong>Edit Workflow</strong> and <strong>Delete Workflow</strong> buttons are disabled for the Default Workflows</p>
 <p><img src="images/workflow-edit-delete.png" alt=""> </p>
 </li>
 </ul>
