--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -82,6 +82,26 @@
 <h2 id="release-notes">Release Notes</h2>
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
+<h1 id="202010"><strong>202010</strong></h1>
+<p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202010.RC8
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 320  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202010 |&nbsp; </p>
+<h2 id="technical-enhancements">Technical enhancements</h2>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. User Password Reset Option</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Organization Admins can now reset other user&#39;s password. (read more <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html#recover-password">here</a>). 
+<br>
+</br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Change in the naming convention of the downloaded test results</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Now the tests results file name downloaded from the Factory Dashboard has a unique name containing the factory name and the time stamp (i.e.: factoryname_timestamp_testresults.zip).
+<br>
+</br> </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Factory run manifest file</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- The factory run manifest now displays the test cases and the platform always picks up the latest file from the test cases component in artifactory.
+<br> 
+</br>  </p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. Factory edit issues</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- To improve the user experience, UI changes have been applied to the <strong>Edit Factory</strong> feature (read more <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a>).
+<br>
+</br> </p>
 <h1 id="202009"><strong>202009</strong></h1>
 <p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202009.RC4
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 273  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202009 |&nbsp; <strong>WorkflowServiceTag</strong>: 202009.RC5</p>
