--- a/home/user-creation-in-paas.html
+++ b/home/user-creation-in-paas.html
@@ -158,11 +158,13 @@ responsibility to inform the new user about its credentials and set of permissio
 <ol>
 <li><p>Click on your <strong>user name</strong> (top-right) and then on <strong>Profile</strong></p>
 </li>
-<li><p>Click on <strong>Edit SSH</strong> button </p>
+<li><p>Click  <strong>Edit SSH</strong> </p>
 <p><img src="images/user-edit-ssh.png" alt=""></p>
 </li>
-<li><p>Do the necessary changes and click on <strong>Update SSH</strong> / if no changes are required click on <strong>Cancel</strong></p>
-<p><img src="images/update-ssh-key.png" alt=""></p>
+<li><p>Do the necessary changes and click on <strong>Update SSH</strong> / if no changes are required click <strong>Cancel</strong></p>
+<p> <img src="images/update-ssh-key.png" alt=""></p>
+<blockquote><p>Note: the  <strong>Update SHH</strong> button is enabled once the editing is started and the number of characters added in the field are over 200.</p>
+</blockquote>
 </li>
 </ol>
 <p><br></p>
@@ -190,7 +192,7 @@ responsibility to inform the new user about its credentials and set of permissio
 <li>choose from the drop-down list the role that needs to be assigned </li>
 </ul>
 <p>To understand what which of the permission does, hover the cursor over the variables and a short description will pop up or click <strong><a href="http://documentation.temenos.cloud/home/techguides/user-permissions">here</a></strong> to get an overview of the permissions.</p>
-<p>For security purposes, if you are inactive for more than 5 minutes on the Temenos Continuous Deployment Platform a dialog box pop up prompts on the screen in the last minute of your inactive session which asks to choose whether you want to extend the session or logout.</p>
+<p>For security reasons, if you are inactive for more than 5 minutes on the Temenos Continuous Deployment Platform a dialog box pop up prompts on the screen in the last minute of your inactive session which asks to choose whether you want to extend the session or logout.</p>
 <p><img src="images/idler-session-timeout.png" alt=""></p>
 <ul>
 <li><p>By clicking <strong>Extend</strong> your session will still be active</p>
@@ -198,6 +200,7 @@ responsibility to inform the new user about its credentials and set of permissio
 <li><p>If you opt to <strong>Logout</strong> or don’t take any action on the pop-up your session will expire. Note that the environment creation, factory runs or other organization operations will still be running. </p>
 </li>
 </ul>
+<p>The session is automatically extended when the you click on the <strong>Overview</strong> or <strong>Events</strong> tabs in the environments details page.</p>
 <h1 id="how-to-use-putty-ssh-client-for-ssh-key-generation">How to use PuTTY SSH client for SSH key generation.</h1>
 <p>If you need access to the source code repository you must provide the public SSH Keys on the user profile section to gain access. You can use any other SSH key generator client.</p>
 <div class="NOTE"><h5>Note</h5><p>If you already have installed a SSH key generator client, you can skip this step.</p>
