--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -83,8 +83,8 @@
 
 <p>This page provides information about the monthly Temenos Continuous Deployment Platform features and improvements in each release.</p>
 <h1 id="202010"><strong>202010</strong></h1>
-<p><strong>InfraBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: TBA
-&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: TBA  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TBA |&nbsp; <strong>WorkflowServiceTag</strong>: TBA</p>
+<p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202010.RC8
+&nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 320  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202010 |&nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. User Password Reset Option</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Organization Admins can now reset other user&#39;s password. (read more <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html#recover-password">here</a>). 
