--- a/home/techguides/git-folder-standardization.html
+++ b/home/techguides/git-folder-standardization.html
@@ -494,11 +494,11 @@
 <ul>
 <li>Passed Deployment:</li>
 </ul>
-<p><img src="./images/passed-env.png" alt=""></p>
+<p><img src="images/passed-env.png" alt=""></p>
 <ul>
 <li>Failed Deployment:</li>
 </ul>
-<p><img src="./images/failed-env.png" alt=""></p>
+<p><img src="images/failed-env.png" alt=""></p>
 <h3 id="44-standalonexml-file-notes">4.4 Standalone.xml file notes</h3>
 <p>There are different standalone.xml templates for TSS and OSS. These are provided to you by us.</p>
 <h3 id="441-the-standalonexml-tss-template">4.4.1 The standalone.xml TSS template:</h3>
