--- a/home/techguides/environment-basic-operations.html
+++ b/home/techguides/environment-basic-operations.html
@@ -149,7 +149,7 @@
 </li>
 <li><p><strong>Clone environment</strong> - create an identical environment by copying the Environment and configuration repository</p>
 </li>
-<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. </p>
+<li><p><strong>Upgrade</strong> - the feature is only available for the <strong>Model Bank TSS/ OSS Stack Template</strong>, therefore Extend environments. By clicking on <strong>Upgrade</strong> you can boost the environment to the target template version. </p>
 <ul>
 <li><p>Upon clicking on the button a pop-up appears which prompts to select another template from the list of available template:
 <img src="images/environment-upgrade-button.png" alt=""> </p>
@@ -194,6 +194,8 @@
 <li><p>The <strong>Upgrade</strong> functionality is not available for environments resulted from factory runs (automated and manual factories).</p>
 </li>
 <li><p><strong>Upgrade</strong> is supported from Python-based templates to Python-based templates only.</p>
+</li>
+<li><p>An environment can only be upgraded with a MB template that is assigned to your organisation. You won&#39;t be able to upgrade a MB-T24-Wildfly-H2-202002 to a MB-T24-Wildfly-H2-202004 if the latter version is not assigned to your organisation. </p>
 </li>
 </ol>
 <p><br>
