--- a/home/techguides/release-info-2020.html
+++ b/home/techguides/release-info-2020.html
@@ -86,10 +86,10 @@
 <p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202010.RC8
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 320  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202010 |&nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Service Virtualization/Git folder standardization</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Service Virtualization/ GIT folder standardization</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This feature provides a self-service template editing mechanism that creates custom template from a model bank template. All the component binaries used in the environment can be changed once the environment is created. Read more <a href="http://documentation.temenos.cloud/home/techguides/git-folder-standardisation.html?q=git%20fol">here</a>.
 <br>
-&lt;br/</p>
+<br></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. User Password Reset Option</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Organization Admins can now reset other user&#39;s password. (read more <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html#recover-password">here</a>). 
 <br>
