--- a/home/techguides/release-info-2020-internal.html
+++ b/home/techguides/release-info-2020-internal.html
@@ -86,19 +86,23 @@
 <p><strong>InfraBuild</strong>: 39  &nbsp;<strong>|</strong>&nbsp; <strong>PortalTag</strong>: 202010.RC8
 &nbsp;<strong>|</strong>&nbsp; <strong>ControllerBuild</strong>: 320  &nbsp;<strong>|</strong>&nbsp;  <strong>ReleaseNumber</strong>: TCD202010 |&nbsp; </p>
 <h2 id="technical-enhancements">Technical enhancements</h2>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. User Password Reset Option</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>1. Service Virtualization/ GIT folder standardization</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;This feature provides a self-service template editing mechanism that creates custom template from a model bank template. All the component binaries used in the environment can be changed once the environment is created. Read more <a href="http://documentation.temenos.cloud/home/techguides/git-folder-standardisation.html?q=git%20fol">here</a>.
+<br>
+<br></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. User Password Reset Option</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Organization Admins can now reset other user&#39;s password. (read more <a href="http://documentation.temenos.cloud/home/user-creation-in-paas.html#recover-password">here</a>). 
 <br>
 </br></p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>2. Change in the naming convention of the downloaded test results</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Change in the naming convention of the downloaded test results</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Now the tests results file name downloaded from the Factory Dashboard has a unique name containing the factory name and the time stamp (i.e.: factoryname_timestamp_testresults.zip).
 <br>
 </br> </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>3. Factory run manifest file</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. Factory run manifest file</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- The factory run manifest now displays the test cases and the platform always picks up the latest file from the test cases component in artifactory.
 <br> 
 </br>  </p>
-<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>4. Factory edit issues</strong></p>
+<p>&nbsp;&nbsp;&nbsp;&nbsp;<strong>5. Factory edit issues</strong></p>
 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- To improve the user experience, UI changes have been applied to the <strong>Edit Factory</strong> feature (read more <a href="http://documentation.temenos.cloud/home/techguides/automated-factories.html">here</a>).
 <br>
 </br> </p>
